@@ -210,12 +210,12 @@ div.document div.highlight {
   margin-bottom: .8em;
 }
 
-div.document div.container {
+div.document div.literal-block-wrapper {
   margin-top: .8em;
   margin-bottom: .8em;
 }
 
-div.document div.container div.highlight {
+div.document div.literal-block-wrapper div.highlight {
   margin: 0;
 }
 
