@@ -217,11 +217,11 @@ div.code-block-caption span.caption-number {
 div.code-block-caption span.caption-text {
 }
 
-div.container {
+div.literal-block-wrapper {
     padding: 1em 1em 0;
 }
 
-div.container pre {
+div.literal-block-wrapper pre {
     margin: 0;
 }
 
